Fixed vertical spacing

--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -17,6 +17,9 @@ $secondary-font: Montserrat, sans-serif;
     text-shadow: 0px 4px 23px rgba(0, 0, 0, 0.1);
 }
 
+p {
+    line-height: 150%;
+}
 
 /* Nav Text */
 
